--- a/basics.html
+++ b/basics.html
@@ -11,6 +11,6 @@
         <h6> smallest header</h6>
         <p> This is for a paragrapgh</p>
         <break></break>
-        <a herf = 
+        <a herf = "#"
     </body>
   </html>
