--- a/notes/advanced_css.html
+++ b/notes/advanced_css.html
@@ -21,7 +21,7 @@
         }
         #content-wrapper{
             display: grid;
-            grid-template-columns: 25% 75%;  <!-- fr-->
+            grid-template-columns: 25% 75%;  
         } 
         button {
             margin: 50px;
@@ -37,7 +37,7 @@
             font-size: 10px;
             font-style: italic;
             font-weight: bold;
-            font-variant: ;
+            
         }
         
 
