--- a/notes/advanced_css.html
+++ b/notes/advanced_css.html
@@ -39,6 +39,18 @@
             font-weight: bold;
             
         }
+        .button {
+  background-color: rgb(255, 105, 247);
+  border: none;
+  color: rgb(255, 255, 255);
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+}
+
         
     </style>
  </head>
