--- a/practices/hidden.html
+++ b/practices/hidden.html
@@ -51,7 +51,7 @@
       font-weight: bold;
     }
     #hiddenImage {
-      width: 500px;   /* bigger hidden image */
+      width: 500px;  
       border: 4px solid rgb(75, 0, 110);
       opacity: 0;
       transition: opacity 0.4s ease;
