--- a/practices/final_2ss.html
+++ b/practices/final_2ss.html
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700;900&family=UnifrakturMaguntia&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: black;
+            background-color: rgb(201, 211, 255);
             font-size: 18px;
-            color: rgb(22, 125, 250);
+            color: rgb(0, 0, 0);
             font-family: "Titillium Web", sans-serif;
             font-weight: 600;
             margin: 0;
@@ -70,7 +70,7 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
-            background-color: rgb(22,125,250);
+            background-color: rgb(96, 8, 197);
             color: white;
             border: none;
             border-radius: 5px;
@@ -88,36 +88,33 @@
     </style>
 </head>
 <body>
-    <h1>▀▄▀▄▀▄▀What to know about F1▀▄▀▄▀▄▀</h1>
+    <h1>☆ ☆  Park City ☆ ☆  </h1>
 
     <div id="text-selection">
-        <h3>What Even Is Formula 1?</h3>
-        <p>F1, or Formula 1, is the highest class of international single-seater auto racing, considered the pinnacle of motorsport. It is a global team sport where drivers compete for the World Championship while their teams fight for the Constructors' Championship. The "formula" in the name refers to the set of rules all participants must follow regarding their cars.</p>
-
-        <h3>Facts About Formula 1</h3>
-        <p>Formula 1 is a high-tech racing sport featuring the world's fastest regulated cars, which use advanced aerodynamics to achieve extreme speeds and cornering forces. Key facts include the immense physical demands on drivers, the massive team sizes, the incredible cost of running a team, and the highly specialized and expensive technology of the cars, like their short-lived engines.</p>
-
+        <h3>Why Park City?</h3>
+        <p>world-class skiing and year-round outdoor recreation, historic Main Street with charming shops and restaurants, and rich cultural scene including the Sundance Film Festival and Olympic legacy. It offers diverse activities for all seasons, from winter sports like skiing, bobsledding, and snow tubing to summer pursuits like hiking, biking, fishing, and golfing. The town's easy access from Salt Lake City, combined with its blend of outdoor adventure and cultural experiences, makes it a popular destination</p>
+        <h3></h3>
+        <p></p>
         <div id="image-row">
-            <img src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-760w,f_auto,q_auto:best/rockcms/2023-11/231121-formula-one-grand-prix-las-vegas-ew-553p-227b5f.jpg" alt="Redbull F1 car coming down the Las Vegas circuit." height="400px"/>
-            <img src="https://www.jalopnik.com/jalopnik/images/rfd3pckg2iguz1ko5ugs.jpg" alt="Mercedes F1 car driven by Lewis Hamilton." height="400px" id="hover-img"/>
+            <img src="https://www.aarp.org/content/dam/aarp/travel/destinations/2023/02/1140-park-city-utah-fall.jpg" alt="Park city view" height="400px"/>
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0ywULagBciZTwemXR4qISNtWIko6SuPhg3g&s" alt="park city mountain" height="400px"/>
         </div>
 
-        <h2>How many tracks are there in Formula 1? Which are most famous?</h2>
-        <p>There are 24 tracks in the current Formula 1 calendar, but it varies year to year because circuits may be added or removed once contracts expire.</p>
+        <h2>Go To Places</h2>
+        <p></p>
         <ul>
-            <li>Monaco: A legendary street circuit known for its tight corners and glamorous setting.</li>
-            <li>Spa-Francorchamps: Famous for its dramatic elevation changes and long, fast corners like Eau Rouge.</li>
-            <li>Silverstone: The site of the very first F1 race in 1950.</li>
-            <li>Suzuka: Famous for its figure-8 layout and challenging corners.</li>
-            <li>Monza: Known as the "Temple of Speed," one of the fastest tracks on the calendar.</li>
-            <li>Interlagos (Brazil): A classic counter-clockwise circuit known for passionate fans.</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
         </ul>
-        <a href="https://racingnews365.com/formula-1-circuits" target="_blank">More info about tracks</a>
+        <a href="" target="_blank"></a>
     </div>
 
     <div id="extra-content">
-        <p>Formula 1 cars are some of the most advanced machines in the world, blending speed, precision, and cutting-edge technology. A Formula 1 car's top speed is typically between 210 and 220 mph, but can exceed this, with the highest official on-track speed being 231.4 mph (372.5 km/h) set by Valtteri Bottas in 2016. In special, off-track events like those at the Bonneville Salt Flats, speeds have been even higher. </p>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShdUpgFDAABZ7V9ZOxpnOn_8l0xyAp_v-Gmg&s" alt="Ferrari F1 car">
+        <p></p>
+        <img src="" alt="">
     </div>
 
     <div style="text-align:center; margin:20px;">
@@ -140,10 +137,10 @@
 
         const hoverImg = document.getElementById("hover-img");
         hoverImg.addEventListener("mouseover", function() {
-            hoverImg.src = "https://cdn-1.motorsport.com/images/000/453/325/453325-3x2-lg.jpg";
+            hoverImg.src = "";
         });
         hoverImg.addEventListener("mouseout", function() {
-            hoverImg.src = "https://www.jalopnik.com/jalopnik/images/rfd3pckg2iguz1ko5ugs.jpg";
+            hoverImg.src = "";
         });
     </script>
 </body>
