--- a/practices/final_2ss.html
+++ b/practices/final_2ss.html
@@ -10,7 +10,7 @@
         body {
             background-color: rgb(201, 211, 255);
             font-size: 18px;
-            color: rgb(0, 0, 0);
+            color: rgb(111, 96, 121);
             font-family: "Titillium Web", sans-serif;
             font-weight: 600;
             margin: 0;
@@ -34,7 +34,7 @@
         }
         img {
             max-width: 45%;
-            height: auto;
+            height: auto;`
             border-radius: 8px;
         }
         h2, h3 {
@@ -103,11 +103,11 @@
         <h2>Go To Places</h2>
         <p></p>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Park City Mountain Resort & Deer Valley Resort: World-class skiing, lodging, and dining.</li>
+            <li>Utah Olympic Park: See the 2002 Winter Olympics venues, museums, bobsled rides, and ziplines.</li>
+            <li>Woodward Park City: Action sports hub with a mountain coaster, trampolines, and snow tubing.</li>
+            <li>No Name Saloon & The Spur: Iconic Main Street bars. </li>
+            <li>Riverhorse on Main & Grappa: Fine dining on Main Street.</li>
         </ul>
         <a href="" target="_blank"></a>
     </div>
